@@ -13,6 +13,7 @@
 #define MNTTYPE_XFS		"xfs"	/* SGI XFS file system */
 #define MNTTYPE_AUTOFS		"autofs"	/* Automount mountpoint */
 #define MNTTYPE_JFS		"jfs"	/* JFS file system */
+#define MNTTYPE_NFS4		"nfs4"	/* NFSv4 filesystem */
 
 /* mount options */
 #define MNTOPT_NOQUOTA		"noquota"	/* don't enforce quota */
